<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpActitity">

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtSignUp"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignUpQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtSignUpQuestion"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtSignUp"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

    <TextView
        android:id="@+id/txtSignInSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txtSignInSignUp"
        android:textColor="#5049C0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtSignUpQuestion"
        app:layout_constraintTop_toTopOf="@+id/txtSignUpQuestion" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtName"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpQuestion"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpQuestion" />

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtPass"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEmail" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:hint="@string/edName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:hint="@string/edEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/txtPass"
        app:layout_constraintTop_toBottomOf="@+id/txtPass">

        <EditText
            android:id="@+id/edPass"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnShowHide"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:alpha="1"
            android:background="@drawable/custom_button_2"
            android:text="@string/btnShowHide"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtSth"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtSth"
        android:textColor="#5049C0"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtPhone"
        app:layout_constraintStart_toStartOf="@+id/txtSth"
        app:layout_constraintTop_toBottomOf="@+id/txtSth" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:hint="@string/edPhone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <TextView
        android:id="@+id/txtSthPhone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#5049C0"
        android:textStyle="bold"
        android:text="@string/txtSthPhone"
        app:layout_constraintStart_toStartOf="@+id/edPhone"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/txtSthPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtSthPhone"
        app:srcCompat="@drawable/ic_baseline_security_24" />

    <TextView
        android:id="@+id/txtAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txtAccept"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="#5049C0"
        android:textColor="#FFFFFF"
        android:text="@string/btnNext"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/txtAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>


