<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.SignInActivity">

    <TextView
        android:id="@+id/txtSignInSignUp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtSignInSignIn"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignInSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtSignInSmall"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtSignInSignUp"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInSignUp" />

    <TextView
        android:id="@+id/txtSignUpSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/txtSignUpSignIn"
        android:textColor="#5049C0"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtSignInSmall"
        app:layout_constraintTop_toTopOf="@+id/txtSignInSmall" />

    <TextView
        android:id="@+id/txtEmailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtEmailSignIn"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtSignInSmall"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInSmall" />

    <TextView
        android:id="@+id/txtPassSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtPassSignIn"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edEmailSignIn"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignIn" />

    <EditText
        android:id="@+id/edEmailSignIn"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/edEmailSignIn"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#80000000"
        app:layout_constraintStart_toStartOf="@+id/txtEmailSignIn"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailSignIn" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/txtPassSignIn"
        app:layout_constraintTop_toBottomOf="@+id/txtPassSignIn">

        <EditText
            android:id="@+id/edPassSignIn"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000000"
            android:textColorHint="#800C0C0C" />

        <Button
            android:id="@+id/btnShowHideSignIn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:alpha="1"
            android:background="@drawable/custom_button_2"
            android:text="@string/btnShowHideSignIn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/txtRemember"
        android:textColor="#80000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnSignInSignIn"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/btnSignInSignIn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemember" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtForgot"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignInSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignInSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInSignIn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/ic_checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>