<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txtForgotPass"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMgsForgot"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txtMgsForgot"
        android:textColor="#80000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtForgotPass"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPass" />

    <EditText
        android:id="@+id/edEmailForgot"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/edEmailForgot"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#000000"
        android:textColorHint="#80000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtMgsForgot"
        app:layout_constraintTop_toBottomOf="@+id/txtMgsForgot" />

    <TextView
        android:id="@+id/txtMgsSth"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtMgsSth"
        android:textColor="#5049C0"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edEmailForgot"
        app:layout_constraintTop_toBottomOf="@+id/edEmailForgot" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/btnReset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/txtMgsSth"
        app:layout_constraintStart_toStartOf="@+id/txtMgsSth"
        app:layout_constraintTop_toBottomOf="@+id/txtMgsSth" />
</androidx.constraintlayout.widget.ConstraintLayout>